tests/type-check/good/shadowing-doesnt-change-type.arr

a = 5
c :: String = block:
  shadow a = "hello"
  a
end
b :: Number = a
