tests/type-check/bad/multiple-errors.arr


a :: Boolean = 5
b :: String  = true
c :: Number  = "hello"
